# mastering-openai-python-apis

./: .gitignore  01-first-request.ipynb  03-color-palette-generator.ipynb  _1_first_request.ipynb  _2_api.ipynb  _3_chatbot.py  _4_color_palette_generator.ipynb  _4_color_palette_generator.py  _5_embeddings.ipynb  _6_f1_qua_assistant.ipynb  _7_dalle.ipynb  api.ipynb  chatbot.py  color_palette_generator.ipynb  color_palette_generator.py  embeddings.ipynb  pyproject.toml  requirements.txt  select-vscode-venv.py
data/: f1_2022.csv
helpers/: commands.py  defaults.py  openai.py
helpers/notebook/: cache.py  decorators.py  defaults.py  embeddings.py  exported_nb.py
helpers/ollama/: chat.py  defaults.py  ollamamanager.py
helpers/openai/: chat.py
static/: app.js
templates/: index.html  style.css
tests/: test_ollama.py  test_ollama_chat.py
